// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticationStep should request WIF if wallet was imported using WIF 1`] = `
<DocumentFragment>
  <div
    class="space-y-6"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Authenticate
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Enter your WIF to authenticate the transaction.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="wif"
      >
        WIF
      </label>
      <div
        class="css-1psxlcd"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none css-1nupw50"
            data-testid="AuthenticationStep__wif"
            name="wif"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          data-testid="Input__addon-end"
        >
          <div
            class=""
          >
            <button
              class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should request mnemonic and second mnemonic 1`] = `
<DocumentFragment>
  <div
    class="space-y-6"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Authenticate
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Enter your mnemonic passphrase to authenticate the transaction.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="mnemonic"
      >
        Mnemonic
      </label>
      <div
        class="css-1psxlcd"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none css-1nupw50"
            data-testid="AuthenticationStep__mnemonic"
            name="mnemonic"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          data-testid="Input__addon-end"
        >
          <div
            class=""
          >
            <button
              class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="flex flex-col css-5kz4tk"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="secondMnemonic"
      >
        2nd Mnemonic
      </label>
      <div
        class="css-px3dod"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            aria-invalid="true"
            autocomplete="off"
            class="no-ligatures w-full border-none css-1nupw50"
            data-testid="AuthenticationStep__second-mnemonic"
            name="secondMnemonic"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
          data-testid="Input__addon-end"
        >
          <span
            data-errortext="This mnemonic does not correspond to your wallet"
            data-testid="Input__error"
          >
            <div
              class="text-theme-danger-500 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                circle-exclamation-mark.svg
              </svg>
            </div>
          </span>
          <div
            class="pl-3"
          >
            <button
              class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should request mnemonic if wallet was imported using address 1`] = `
<DocumentFragment>
  <div
    class="space-y-6"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Authenticate
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Enter your mnemonic passphrase to authenticate the transaction.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-5kz4tk"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="mnemonic"
      >
        Mnemonic
      </label>
      <div
        class="css-px3dod"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            aria-invalid="true"
            autocomplete="off"
            class="no-ligatures w-full border-none css-1nupw50"
            data-testid="AuthenticationStep__mnemonic"
            name="mnemonic"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
          data-testid="Input__addon-end"
        >
          <span
            data-errortext="This mnemonic does not correspond to your wallet"
            data-testid="Input__error"
          >
            <div
              class="text-theme-danger-500 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                circle-exclamation-mark.svg
              </svg>
            </div>
          </span>
          <div
            class="pl-3"
          >
            <button
              class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should request mnemonic if wallet was imported using mnemonic 1`] = `
<DocumentFragment>
  <div
    class="space-y-6"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Authenticate
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Enter your mnemonic passphrase to authenticate the transaction.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-5kz4tk"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="mnemonic"
      >
        Mnemonic
      </label>
      <div
        class="css-px3dod"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            aria-invalid="true"
            autocomplete="off"
            class="no-ligatures w-full border-none css-1nupw50"
            data-testid="AuthenticationStep__mnemonic"
            name="mnemonic"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
          data-testid="Input__addon-end"
        >
          <span
            data-errortext="This mnemonic does not correspond to your wallet"
            data-testid="Input__error"
          >
            <div
              class="text-theme-danger-500 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                circle-exclamation-mark.svg
              </svg>
            </div>
          </span>
          <div
            class="pl-3"
          >
            <button
              class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should request private key if wallet was imported using private key 1`] = `
<DocumentFragment>
  <div
    class="space-y-6"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Authenticate
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Enter your private key to authenticate the transaction.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="privateKey"
      >
        Private Key
      </label>
      <div
        class="css-1psxlcd"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none css-1nupw50"
            data-testid="AuthenticationStep__private-key"
            name="privateKey"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          data-testid="Input__addon-end"
        >
          <div
            class=""
          >
            <button
              class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should request secret and second secret 1`] = `
<DocumentFragment>
  <div
    class="space-y-6"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Authenticate
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Enter your secret to authenticate the transaction.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="secret"
      >
        Secret
      </label>
      <div
        class="css-1psxlcd"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none css-1nupw50"
            data-testid="AuthenticationStep__secret"
            name="secret"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          data-testid="Input__addon-end"
        >
          <div
            class=""
          >
            <button
              class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="secondSecret"
      >
        2nd Secret
      </label>
      <div
        class="css-1psxlcd"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none css-1nupw50"
            data-testid="AuthenticationStep__second-secret"
            name="secondSecret"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          data-testid="Input__addon-end"
        >
          <div
            class=""
          >
            <button
              class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should request secret if wallet was imported using secret 1`] = `
<DocumentFragment>
  <div
    class="space-y-6"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Authenticate
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Enter your secret to authenticate the transaction.
        </div>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="secret"
      >
        Secret
      </label>
      <div
        class="css-1psxlcd"
      >
        <div
          class="relative flex h-full flex-1"
        >
          <input
            autocomplete="off"
            class="no-ligatures w-full border-none css-1nupw50"
            data-testid="AuthenticationStep__secret"
            name="secret"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          data-testid="Input__addon-end"
        >
          <div
            class=""
          >
            <button
              class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should show ledger waiting app screen 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="AuthenticationStep"
  >
    <div
      class="mt-8 space-y-8"
      data-testid="LedgerWaitingAppContent"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-2xl"
            data-testid="header__title"
          >
            Ledger Wallet
          </h1>
          <div
            class="flex items-center text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            Connect your Ledger and confirm input.
          </div>
        </div>
      </div>
      <svg
        class="mx-auto max-w-full"
      >
        waiting-ledger-device-light-green.svg
      </svg>
      <div
        class="inline-flex w-full items-center justify-center space-x-3"
      >
        <div
          class="css-i3nrbr"
          color="info"
        />
        <span
          class="animate-pulse font-semibold text-theme-secondary-text"
          data-testid="LedgerWaitingApp-loading_message"
        >
          Open the ARK app on your device ...
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should show ledger waiting device screen 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="AuthenticationStep"
  >
    <div
      class="space-y-8"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-2xl"
            data-testid="header__title"
          >
            Ledger Wallet
          </h1>
          <div
            class="flex items-center text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            Connect your Ledger and confirm input.
          </div>
        </div>
      </div>
      <svg
        class="mx-auto max-w-full"
      >
        waiting-ledger-device-light-green.svg
      </svg>
      <div
        class="inline-flex w-full items-center justify-center space-x-3"
      >
        <div
          class="css-i3nrbr"
          color="info"
        />
        <span
          class="animate-pulse font-semibold text-theme-secondary-text"
          data-testid="LedgerWaitingDevice-loading_message"
        >
          Waiting for Ledger ...
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should show ledger waiting device screen for Nano S 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Confirm Your Transaction
        </h1>
      </div>
    </div>
    <svg
      class="my-8 max-w-full"
    >
      confirm-transaction-ledger-banner-light-green.svg
    </svg>
    <div
      class="mt-8 text-theme-secondary-text"
      data-testid="LedgerConfirmation-description"
    >
      Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
    </div>
    <div
      class="mt-8 inline-flex w-full items-center justify-center space-x-3"
    >
      <div
        class="css-i3nrbr"
        color="info"
      />
      <span
        class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-600"
        data-testid="LedgerConfirmation-loading_message"
      >
        Waiting for confirmation …
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should show ledger waiting device screen for Nano X 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Confirm Your Transaction
        </h1>
      </div>
    </div>
    <svg
      class="my-8 max-w-full"
    >
      confirm-transaction-ledger-banner-light-green.svg
    </svg>
    <div
      class="mt-8 text-theme-secondary-text"
      data-testid="LedgerConfirmation-description"
    >
      Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
    </div>
    <div
      class="mt-8 inline-flex w-full items-center justify-center space-x-3"
    >
      <div
        class="css-i3nrbr"
        color="info"
      />
      <span
        class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-600"
        data-testid="LedgerConfirmation-loading_message"
      >
        Waiting for confirmation …
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should show only ledger confirmation 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Confirm Your Transaction
        </h1>
      </div>
    </div>
    <svg
      class="my-8 max-w-full"
    >
      confirm-transaction-ledger-banner-light-green.svg
    </svg>
    <div
      class="mt-8 text-theme-secondary-text"
      data-testid="LedgerConfirmation-description"
    >
      Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
    </div>
    <div
      class="mt-8 inline-flex w-full items-center justify-center space-x-3"
    >
      <div
        class="css-i3nrbr"
        color="info"
      />
      <span
        class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-600"
        data-testid="LedgerConfirmation-loading_message"
      >
        Waiting for confirmation …
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should specify ledger supported model 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="AuthenticationStep"
  >
    <div
      class="mt-8 space-y-8"
      data-testid="LedgerDeviceError"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-2xl"
            data-testid="header__title"
          >
            Ledger Wallet
          </h1>
          <div
            class="flex items-center text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            Connect your Ledger Nano X and confirm input.
          </div>
        </div>
      </div>
      <svg
        class="mx-auto max-w-full"
      >
        error-transaction-ledger-banner-light-green.svg
      </svg>
      <div
        class="flex flex-col overflow-hidden rounded-xl"
      >
        <div
          class="css-ic0qlc"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg>
              circle-cross.svg
            </svg>
          </div>
          <span>
            Error
          </span>
        </div>
        <div
          class="css-6o9bco"
        >
          A 
          <strong>
            Ledger Nano S
          </strong>
           is connected, but his operation requires a 
          <strong>
            Ledger Nano X
          </strong>
          . Connect the appropriate device to continue.
        </div>
      </div>
      <div
        class="inline-flex w-full items-center justify-center space-x-3"
      >
        <div
          class="css-i3nrbr"
          color="info"
        />
        <span
          class="animate-pulse font-semibold text-theme-secondary-text"
          data-testid="LedgerWaitingDevice-loading_message"
        >
          Waiting for Ledger ...
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
